$Id: History,v 1.2 1999-04-15 17:42:00 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

interfaces-01-00-01  15th April 1999  Hajime Yoshida/Masayasu Nagamatu
1) some code polishment after the messages by CodeWarriers (Guy)
2) Help functions in G4VBasicShell and related rearrangement of
        G4UIterminal etc.. (Guy)
3) removal of ifdef for GNU_GCC in G4UIGAG. (Hajime)

interfaces-00-03-07 9th December 1998 Hajime Yoshida/Masayasu Nagamatu
- minor improvements in Help of G4UIterminal.cc
- G4UIGAG's Help in terminal mode is now equivalent to G4UIterminal.cc

interfaces-00-03-06 27th November 1998 Hajime Yoshida/Masayasu Nagamatu
- added 'if' protection to the destructor of G4UIterminal/G4UIGAG.

interfaces-00-03-05 12th November 1998 Masayasu Nagamatu
-test/G4cout_test01/ added an example for redirectiong stream using G4cout

interfaces-00-03-04  13th October 1998  Masayasu Nagamatu
- G4cout - changes to G4UIterminal.cc, G4UIGAG.hh, G4UIGAG.cc.

07 Ocotober 1998  Guy Barrand:
- G4UIXm.cc, G4UIWin32.cc : cout, cerr control.

interfaces-00-03-03 7th  October Hajime Yoshida
- Bug fix to prevent "help" crashing in some circumstances.

interfaces-00-03-02 14th Sep. Hajime Yoshida