@@ -1,4 +1,4 @@
-$Id: History,v 1.2 1999-04-15 17:42:00 johna Exp $
+$Id: History,v 1.3 1999-04-16 10:05:56 barrand Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+head 16th April 1999  Guy Barrand
+1) G4VBasicShell, G4UIXm, G4UIWin32 : command completion.
+2) G4InteractorMessenger, G4VInteractorManager : code polishement.
 
 interfaces-01-00-01  15th April 1999  Hajime Yoshida/Masayasu Nagamatu
 1) some code polishment after the messages by CodeWarriers (Guy)
